# blog-rs

./: Cargo.toml
src/: handlers.rs  main.rs
src/posts/: fetcher.rs  filesystem.rs  github.rs  mod.rs  model.rs
src/web/: app_state.rs
templates/: base.html  index.html  post.html
